--- a/borek.html
+++ b/borek.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8" http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <meta charset="utf-8">
     <meta author="grupo 1">
     <title>BOREK</title>
     <link rel="stylesheet" href="estils.css" type="text/css">
@@ -48,7 +48,7 @@
   <body>
       <nav class="normal"><a name="inicio"> </a>
         <ul>
-            <a href="#home" class="active" ><img src="img/shortlogo.png" width="45px"></a>
+          <a class="active" href="index.html"><img src="img/shortlogo.png" width="45px"></a>
           <li style="float:right"><a class="active" href="recetas.html">RECEPTES</a></li>
           <li style="float:right"><a class="active" href="quienes.html">QUI SOM?</a></li>
           <li style="float:right"><a class="active" href="index.html">INICI</a></li>
@@ -80,74 +80,68 @@
 
 
 
-       <div class="receptes">
+      <div class="receptes">
 
-         <div class="title">
-           <h1>RECEPTA BÖREK</h1>
-         </div>
+        <div class="title">
+          <h1>RECEPTA BÖREK</h1>
+        </div>
 
-         <div class="platito">
-           <h4 class=platito-menu-titulo>Börek</h4>
-           <div class="platito-menu">
-             <div class="platito-item-imagenes" alt="Börek" >
-               <div class="slider">
-                 <img src="img/comida/borekfinal.jpg" >
-                 <img src="img/comida/menemenfinal.jpg">
-                 <img src="img/comida/durumfinal.jpg">
-                 <img src="img/comida/falafelfinal.jpg">
-                 <img src="img/comida/lahmacunfinal.jpg">
-                 <img src="img/comida/lukumfinal.jpg">
-               </div>
+        <div class="platito">
+          <h4 class=platito-menu-titulo>BÖREK</h4>
+          <div class="platito-menu">
+           <div class="platito-item">
+             <div class="platito-item-imagenes">
+                 <img src="img/comida/borekfinal.jpg"/>
              </div>
-            <div class="platito-item">
+             <div class="platito-item-texto">
+               <h5 class="platito-item-heading">
+                 <span class="platito-item-nombre">Ingredients</span>
+               </h5>
+               <p class="platito-item-ing">
 
-              <div class="platito-item-texto">
-                <h5 class="platito-item-heading">
-                  <span class="platito-item-nombre">Ingredients</span>
-                </h5>
-                <p class="platito-item-ing">
-                   <b>Massa</b> <br>
+                 <b>Massa</b> <br>
+                 · 10 fulles de pasta tall.<br>
+                 · 600 g d’espinacs frescos i trossejats.<br>
+                 · 1 Ceba mitjana.<br>
+                 · 250 g de formatge feta.<br>
+                 · Sal i pebre.<br>
 
-                  · 10 fulles de pasta tall.<br>
-                  · 600 g d’espinacs frescos i trossejats.<br>
-                  · 1 Ceba mitjana.<br>
-                  · 250 g de formatge feta.<br>
-                  · Sal i pebre.<br>
+                 <b>Crema</b> <br>
+                 · 125 ml de llet.<br>
+                 · 3 cullerades d’oli d’oliva verge extra.<br>
+                 · 1 ou.<br>
+                 · 2 cullerades de iogurt grec. <br>
+                 · 1 pessic de sal.<br>
+                 · Pebre negre.<br>
+                 · Formatge feta.<br> </p>
+               <h5 class="platito-item-heading">
+                 <span class="platito-item-nombre-2">Procediment</span>
+               </h5>
+                 <p class="platito-item-desc">
+                   1.  Prenem una cassola i posem la meitat de l’aigua.
+                   Ajuntem amb el sucre i cuinem a foc mitjà. <br>
+                   2.  Afegim la ratlladura de la llimona i de la taronja.
+                   Bullim durant 15 minuts aproximadament i esperem
+                   que prengui la consistència d’un almívar. <br>
+                   3.  Amb un colador i un recipient passem l’almívar i no
+                   retirarem les restes de les pells de les fruites. <br>
+                   4.  En una altra cassola, posem la gelatina i l’aigua que
+                   no s’ha fet servir. Posem al foc a temperatura baixa
+                   perquè es vagi dissolent del tot. Afegim l’almívar a
+                   la preparació anterior i cuinem en conjunt. Remenar
+                   amb una cullera.<br>
+                   5.  Prendrem una font rectangular i greixem amb oli
+                   de gira-sol o un altre oli vegetal que no tingui sabor.
+                   Abocar la barreja.<br>
+                   6.  Deixem refredar i portem a la nevera perquè se soli-
+                   difiqui. La idea és que es pugui tallar a daus.
+                 </p>
+             </div>
+           </div>
+        </div>
+      </div>
 
-                  <b>Crema</b>
-                  · 125 ml de llet.<br>
-                  · 3 cullerades d’oli d’oliva verge extra.<br>
-                  · 1 ou.<br>
-                  · 2 cullerades de iogurt grec. <br>
-                  · 1 pessic de sal.<br>
-                  · Pebre negre.<br>
-                  · Formatge feta.<br> </p>
-                <h5 class="platito-item-heading">
-                  <span class="platito-item-nombre-2">Procediment</span>
-                </h5>
-                  <p class="platito-item-desc">
-                    1.  Prenem una cassola i posem la meitat de l’aigua.
-                    Ajuntem amb el sucre i cuinem a foc mitjà. <br>
-                    2.  Afegim la ratlladura de la llimona i de la taronja.
-                    Bullim durant 15 minuts aproximadament i esperem
-                    que prengui la consistència d’un almívar. <br>
-                    3.  Amb un colador i un recipient passem l’almívar i no
-                    retirarem les restes de les pells de les fruites. <br>
-                    4.  En una altra cassola, posem la gelatina i l’aigua que
-                    no s’ha fet servir. Posem al foc a temperatura baixa
-                    perquè es vagi dissolent del tot. Afegim l’almívar a
-                    la preparació anterior i cuinem en conjunt. Remenar
-                    amb una cullera.<br>
-                    5.  Prendrem una font rectangular i greixem amb oli
-                    de gira-sol o un altre oli vegetal que no tingui sabor.
-                    Abocar la barreja.<br>
-                    6.  Deixem refredar i portem a la nevera perquè se soli-
-                    difiqui. La idea és que es pugui tallar a daus.
-                  </p>
-              </div>
-            </div>
-         </div>
-       </div>
+
 
        <div id="boton"><a href="#inicio"> <img src="img/globoweb.png" height= "80px"> </a></div>
 
@@ -156,7 +150,7 @@
 
               &copy; Copyright 2022 - AFIYET OLSUN
               <div class="pie">
-                <a href="https://twitter.com/afiyetolsun22"><img src="img/icon/twt.png" alt="twitter"> </a> <a href="https://instagram.com/afiyet_olsun_22?igshid=YmMyMTA2M2Y="><img src="img/icon/igram.png" alt="instagram"> </a>
+                <a href="https://twitter.com/afiyetolsun22" target="_blank"><img src="img/icon/twt.png" alt="twitter"> </a> <a href="https://instagram.com/afiyet_olsun_22?igshid=YmMyMTA2M2Y=" target="_blank"><img src="img/icon/igram.png" alt="instagram"> </a>
               </div>
         </footer>
 
