--- a/falafel.html
+++ b/falafel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8" http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <meta charset="utf-8">
     <meta author="grupo 1">
     <title>FALAFEL</title>
     <link rel="stylesheet" href="estils.css" type="text/css">
@@ -48,7 +48,7 @@
   <body>
       <nav class="normal"><a name="inicio"> </a>
         <ul>
-            <a href="#home" class="active" ><img src="img/shortlogo.png" width="45px"></a>
+          <a class="active" href="index.html"><img src="img/shortlogo.png" width="45px"></a>
           <li style="float:right"><a class="active" href="recetas.html">RECEPTES</a></li>
           <li style="float:right"><a class="active" href="quienes.html">QUI SOM?</a></li>
           <li style="float:right"><a class="active" href="index.html">INICI</a></li>
@@ -87,18 +87,11 @@
          </div>
 
          <div class="platito">
-           <h4 class=platito-menu-titulo>Falafel</h4>
+           <h4 class=platito-menu-titulo>FALAFEL</h4>
            <div class="platito-menu">
             <div class="platito-item">
-              <div class="platito-item-imagenes" alt="Falafel" >
-                <div class="slider">
-                  <img src="img/comida/lukumfinal.jpg" >
-                  <img src="img/comida/menemenfinal.jpg">
-                  <img src="img/comida/durumfinal.jpg">
-                  <img src="img/comida/falafelfinal.jpg">
-                  <img src="img/comida/lahmacunfinal.jpg">
-                  <img src="img/comida/lukumfinal.jpg">
-                </div>
+              <div class="platito-item-imagenes">
+                  <img src="img/comida/falafelfinal.jpg"/>
               </div>
               <div class="platito-item-texto">
                 <h5 class="platito-item-heading">
@@ -136,7 +129,7 @@
        <footer>
              &copy; Copyright 2022 - AFIYET OLSUN
              <div class="pie">
-               <a href="https://twitter.com/afiyetolsun22"><img src="img/icon/twt.png" alt="twitter"> </a> <a href="https://instagram.com/afiyet_olsun_22?igshid=YmMyMTA2M2Y="><img src="img/icon/igram.png" alt="instagram"> </a>
+               <a href="https://twitter.com/afiyetolsun22" target="_blank"><img src="img/icon/twt.png" alt="twitter"> </a> <a href="https://instagram.com/afiyet_olsun_22?igshid=YmMyMTA2M2Y=" target="_blank"><img src="img/icon/igram.png" alt="instagram"> </a>
              </div>
        </footer>
 
