--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8" http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <meta charset="utf-8">
     <meta author="grupo 1">
     <title>INICI</title>
     <link rel="stylesheet" href="estils.css" type="text/css">
@@ -37,8 +37,7 @@
         $('html, body').animate({scrollTop:0}, 'slow');
         return false;
     });
-
-});
+    });
     </script>
     <style>
     @import url('http://fonts.cdnfonts.com/css/kulhu-one');
@@ -48,7 +47,7 @@
   <body>
       <nav class="normal"><a name="inicio"> </a>
         <ul>
-            <a href="#home" class="active" ><img src="img/shortlogo.png" width="45px"></a>
+          <a class="active" href="index.html"><img src="img/shortlogo.png" width="45px"></a>
           <li style="float:right"><a class="active" href="recetas.html">RECEPTES</a></li>
           <li style="float:right"><a class="active" href="quienes.html">QUI SOM?</a></li>
           <li style="float:right"><a class="active" href="index.html">INICI</a></li>
@@ -63,7 +62,7 @@
 
       <nav class="mobile"></a>
         <div class="topnav">
-          <a href="#home" class="active" ><img src="img/shortlogo.png"></a>
+          <a class="active" href="index.html"><img src="img/shortlogo.png"></a>
           <!-- logotipo en la barra de navegación -->
             <div id="myLinks">
             <!-- menu hamburguesa -->
@@ -81,7 +80,7 @@
 
 
 
-          <div class="inici"></a>
+          <div class="inici">
             <div class="welcome">
               <img src="img/logo.png">
               <span>Que Aprofiti!</span>
@@ -104,7 +103,7 @@
           <footer>
                 &copy; Copyright 2022 - AFIYET OLSUN
                 <div class="pie">
-                  <a href="https://twitter.com/afiyetolsun22"><img src="img/icon/twt.png" alt="twitter"> </a> <a href="https://instagram.com/afiyet_olsun_22?igshid=YmMyMTA2M2Y="><img src="img/icon/igram.png" alt="instagram"> </a>
+                  <a href="https://twitter.com/afiyetolsun22" target="_blank"><img src="img/icon/twt.png" alt="twitter"> </a> <a href="https://instagram.com/afiyet_olsun_22?igshid=YmMyMTA2M2Y=" target="_blank"><img src="img/icon/igram.png" alt="instagram"> </a>
                 </div>
           </footer>
 
