--- a/recetas.html
+++ b/recetas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8" http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <meta charset="utf-8">
     <meta author="grupo 1">
     <title>RECEPTES</title>
     <link rel="stylesheet" href="estils.css" type="text/css">
@@ -37,8 +37,7 @@
         $('html, body').animate({scrollTop:0}, 'slow');
         return false;
     });
-
-});
+    });
     </script>
     <style>
     @import url('http://fonts.cdnfonts.com/css/kulhu-one');
@@ -48,7 +47,7 @@
   <body>
       <nav class="normal"><a name="inicio"></a>
         <ul>
-            <a href="#home" class="active" ><img src="img/shortlogo.png" width="45px"></a>
+          <a class="active" href="index.html"><img src="img/shortlogo.png" width="45px"></a>
           <li style="float:right"><a class="active" href="recetas.html">RECEPTES</a></li>
           <li style="float:right"><a class="active" href="quienes.html">QUI SOM?</a></li>
           <li style="float:right"><a class="active" href="index.html">INICI</a></li>
@@ -59,7 +58,7 @@
       </nav>
 
 
-      <nav class="mobile"></a>
+      <nav class="mobile"><a name="inicio"> </a>
         <div class="topnav">
             <a href="#home" class="active" ><img src="img/shortlogo.png"><p>RECEPTES</p></a>
           <!-- logotipo en la barra de navegación -->
@@ -76,7 +75,6 @@
           </a>
         </div>
       </nav>
-
 
 
 
@@ -168,21 +166,19 @@
                 </p>
               </div>
             </div>
-
-
            </div>
          </div>
 
        </div>
 
+
        <div id="boton"><a href="#inicio"> <img src="img/globoweb.png" height= "80px"> </a></div>
 
 
        <footer>
-
              &copy; Copyright 2022 - AFIYET OLSUN
              <div class="pie">
-               <a href="https://twitter.com/afiyetolsun22"><img src="img/icon/twt.png" alt="twitter"> </a> <a href="https://instagram.com/afiyet_olsun_22?igshid=YmMyMTA2M2Y="><img src="img/icon/igram.png" alt="instagram"> </a>
+               <a href="https://twitter.com/afiyetolsun22" target="_blank"><img src="img/icon/twt.png" alt="twitter"> </a> <a href="https://instagram.com/afiyet_olsun_22?igshid=YmMyMTA2M2Y=" target="_blank"><img src="img/icon/igram.png" alt="instagram"> </a>
              </div>
        </footer>
 
@@ -197,5 +193,9 @@
         }
       </script>
 
-  </body>
+
+
+
+
+       </body>
 </html>
