--- a/quienes.html
+++ b/quienes.html
@@ -59,7 +59,7 @@
 
           <nav class="mobile"></a>
             <div class="topnav">
-              <a href="#home" class="active" ><img src="img/shortlogo.png"></a>
+              <a href="#home" class="active" ><img src="img/shortlogo.png"><p>QUI SOM?</p></a>
               <!-- logotipo en la barra de navegación -->
                 <div id="myLinks">
                 <!-- menu hamburguesa -->
